--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "sqlite3": "^5.1.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.4.1"
   }
