--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:all": "concurrently \"cd backend && npm run dev\" \"npm run dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "concurrently": "^7.4.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
